turtleart.housemany.HouseMany.scala.error
Compilation error:
HouseMany:18: error: not found: value gache
  gache(90);
  ^